--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,11 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
+
+    <!-- Stocks Widget -->
+    <dimen name="widget_default_width">170dp</dimen>
+    <dimen name="widget_default_height">40dp</dimen>
+    <dimen name="widget_min_resize_width">170dp</dimen>
+    <dimen name="widget_min_resize_height">@dimen/widget_default_height</dimen>
+    <dimen name="widget_large_width">220dp</dimen>
+
 </resources>
