- Added collection widget; - Other small fixes

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,11 @@
     <dimen name="widget_min_resize_height">@dimen/widget_default_height</dimen>
     <dimen name="widget_large_width">220dp</dimen>
 
+    <dimen name="widget_list_stocks_default_width">250dp</dimen>
+    <dimen name="widget_list_stocks_default_height">180dp</dimen>
+    <dimen name="widget_list_stocks_min_resize_width">220dp</dimen>
+    <dimen name="widget_list_stocks_min_resize_height">@dimen/widget_list_stocks_default_height</dimen>
+
+    <dimen name="widget_margin">8dp</dimen>
+
 </resources>
