--- a/app/src/main/res/layout-v17/list_item_quote.xml
+++ b/app/src/main/res/layout-v17/list_item_quote.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
+              android:id="@+id/list_item_container"
               android:layout_width="match_parent"
               android:layout_height="?android:attr/listPreferredItemHeight"
               android:gravity="center_vertical"
-              android:orientation="horizontal"
-    >
+              android:orientation="horizontal">
 
     <TextView
         android:id="@+id/symbol"
@@ -35,8 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/percent_change_pill_green"
-            android:paddingStart="3dp"
             android:paddingEnd="3dp"
+            android:paddingStart="3dp"
             tools:text="100%"/>
     </LinearLayout>
 </LinearLayout>
