--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"/>
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
@@ -42,7 +44,8 @@
         android:layout_margin="16dp"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
-        android:contentDescription="Adding new stock"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="@string/adding_new_stock"
         android:onClick="button"
         android:src="@drawable/fab_plus"
         app:backgroundTint="@color/colorAccent"
