--- a/app/src/main/res/layout/list_item_widget_stock.xml
+++ b/app/src/main/res/layout/list_item_widget_stock.xml
@@ -27,6 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10sp"
+            android:layout_marginRight="10sp"
             tools:text="1000.00"/>
 
         <TextView
@@ -34,10 +35,11 @@
             style="@style/PercentChangeTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/percent_change_pill_green"
             android:contentDescription=""
             android:paddingLeft="3dp"
+            android:paddingEnd="3dp"
             android:paddingRight="3dp"
+            android:paddingStart="3dp"
             tools:text="100%"/>
     </LinearLayout>
 </LinearLayout>
